# SmartAgent

./: README.md  pyproject.toml
src/: agent.py  settings.py  tools.db  tools.py
src/tools/: create_tool.py  new_tool.py  test.py
