[tool.poetry]
name = "smartagent"
version = "0.1.0"
description = ""
authors = ["grct"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.6"
tavily-python = "^0.4.0"
langchain-community = "^0.2.12"
langsmith = "^0.1.101"
langchain-anthropic = "^0.1.23"
langchain-openai = "^0.1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
